# project-for-data-science-2025

./: README.md
pytorch-pmnist-agent/: Agent Aquamarine(initial ver.).py  README.md  agent.py  pyproject.toml  report.ipynb  requirements.txt
pytorch-pmnist-agent/experiments/: baseline.py  run_benchmarks.py
pytorch-pmnist-agent/models/: ensemble.py  mlp.py
pytorch-pmnist-agent/notebooks/: estimation.ipynb  evaluation.ipynb
pytorch-pmnist-agent/pytorch-pmnist-agent/: agent.py  baseline_agent.py  utils.py
pytorch-pmnist-agent/utils/: monitoring.py  optimization.py
