[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-arena-pmnist"
version = "0.1.0"
description = "High-performance PyTorch agents for Permuted MNIST competition."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "scikit-learn",
    "tabulate"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]
